<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <!--
          3.2.5 → 3.2.12：修复 Spring Framework 6.1.x CVE-2024-38820（DataBinder 反射安全问题）
          升级范围：仅 Spring Boot 3.2.x 补丁版，Spring Framework 同步 6.1.13 → 6.1.14。
          兼容性：
            - MyBatis Plus 3.5.5、Druid 1.2.21、Knife4j 4.3.0、Hutool 5.8.25、EasyExcel 3.3.3 — 全部继续可用
            - Resilience4j 2.2.0（mes-aps）/ spring-cloud-starter-circuitbreaker-reactor-resilience4j（mes-gateway）— 全部继续可用
            - Spring Cloud 2023.0.1 / Spring Cloud Alibaba 2023.0.1.0 — 与 Boot 3.2.12 官方兼容
            - JJwt 0.12.5、MapStruct 1.5.5.Final、MySQL Connector/J — 无影响
        -->
        <version>3.2.12</version>
        <relativePath/>
    </parent>

    <groupId>com.mes</groupId>
    <artifactId>mes-backend</artifactId>
    <version>1.1.0</version>
    <packaging>pom</packaging>
    <name>MES Backend</name>
    <description>制造执行系统 - 后端</description>

    <modules>
        <!-- 基础模块 -->
        <module>mes-common</module>
        <module>mes-framework</module>
        <module>mes-system</module>

        <module>mes-api</module>

        <!-- 业务模块（库） -->
        <module>mes-basic</module>
        <module>mes-team</module>
        <module>mes-process</module>
        <module>mes-workorder</module>
        <module>mes-dispatch</module>
        <module>mes-plan</module>
        <module>mes-abnormal</module>
        <module>mes-quality</module>
        <module>mes-query</module>
        <module>mes-material</module>
        <module>mes-aps</module>

        <!-- 单体聚合（兼容模式） -->
        <module>mes-admin</module>

        <!-- 微服务启动器 -->
        <module>mes-gateway</module>
        <module>mes-system-service</module>
        <module>mes-master-data-service</module>
        <module>mes-production-service</module>
        <module>mes-quality-service</module>
        <module>mes-material-service</module>
        <module>mes-integration-service</module>
        <module>mes-query-service</module>
    </modules>

    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <mes.version>1.1.0</mes.version>

        <!-- 核心依赖版本 -->
        <mybatis-plus.version>3.5.5</mybatis-plus.version>
        <mysql.version>8.0.33</mysql.version>
        <druid.version>1.2.21</druid.version>
        <knife4j.version>4.3.0</knife4j.version>
        <hutool.version>5.8.25</hutool.version>
        <mapstruct.version>1.5.5.Final</mapstruct.version>
        <easyexcel.version>3.3.3</easyexcel.version>
        <jjwt.version>0.12.5</jjwt.version>

        <!-- Spring Cloud -->
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <spring-cloud-alibaba.version>2023.0.1.0</spring-cloud-alibaba.version>
    </properties>

    <!-- 统一依赖版本管理 -->
    <dependencyManagement>
        <dependencies>
            <!-- ==================== Spring Cloud BOM ==================== -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- ==================== 内部模块 ==================== -->
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-gateway</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-system</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-api</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-common</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-framework</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-basic</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-team</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-process</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-plan</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-workorder</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-dispatch</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-abnormal</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-quality</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-query</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-material</artifactId>
                <version>${mes.version}</version>
            </dependency>
            <dependency>
                <groupId>com.mes</groupId>
                <artifactId>mes-aps</artifactId>
                <version>${mes.version}</version>
            </dependency>

            <!-- ==================== 第三方依赖 ==================== -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-3-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.xiaoymin</groupId>
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                <version>${knife4j.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-processor</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-api</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-impl</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
            <dependency>
                <groupId>io.jsonwebtoken</groupId>
                <artifactId>jjwt-jackson</artifactId>
                <version>${jjwt.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- 所有模块都继承的依赖 -->
    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <!-- 测试依赖：JUnit 5 + Mockito + AssertJ 等由 Spring Boot BOM 统一管理 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
